# apiPassaAbola

./: .env  .gitignore  README.md  banco.db  montar_db.py  pyproject.toml
src/: Settings.py
src/passaabolaapi/: app.py  utils.py
src/passaabolaapi/database/: tables_database.py
src/passaabolaapi/schemas/: SchemaJogadora.py  SchemaJogo.py  SchemaMessage.py  SchemaPostGol.py  SchemaTime.py
