[project]
name = "passaabolaapi"
version = "0.1.0"
description = ""
authors = [
    {name = "joaovitorpiccolo",email = "joaovitorpiccolo015@gmail.com"}
]
readme = "README.md"
requires-python = "3.12.*"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.9,<3.0.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "passaabolaapi", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'fastapi dev src/passaabolaapi/app.py --port 8000'
